Revision history for Mojolicious-Plugin-OpenAPI-Modern

{{$NEXT}}

0.016     2025-06-03 20:53:06Z
          - fix a version dependency to avoid a deprecation warning

0.015     2025-04-17 18:56:32Z
          - add config option "document_uri", to allow explicitly setting the
            canonical uri of the OpenAPI document

0.014     2025-01-26 20:26:39Z
          - fix usage of JSON::Schema::Modern::Result objects, in preparation
            for an upcoming deprecation of boolean overloads

0.013     2024-12-20 20:55:05Z
          - adjust tests for changes in OpenAPI::Modern 0.074

0.012     2024-09-15 15:30:24Z
          - adjust tests for changes in OpenAPI::Modern 0.068

0.011     2024-08-19 17:47:31Z
          - adjust tests for changes in OpenAPI::Modern 0.067

0.010     2024-05-09 16:28:08Z
          - adjust tests for changes in OpenAPI::Modern 0.063

0.009     2024-04-06 23:09:07Z
          - adjust tests for changes in OpenAPI::Modern 0.062

0.008     2024-01-15 03:21:04Z
          - fix prerequisite declaration to allow tests to pass

0.007     2023-12-10 06:12:33Z
          - new config option "openapi_obj", for providing the OpenAPI::Modern
            object to use instead of constructing a new one.

0.006     2023-11-24 01:27:44Z
          - new config option "after_response", for providing a subref for
            validating the response when it is returned.

0.005     2023-02-27 01:42:43Z
          - fix test incompatibilities with OpenAPI::Modern 0.040

0.004     2022-12-11 01:22:59Z
          - bump dependency on OpenAPI::Modern for new features and
            for compatibility in test results

0.003     2022-06-08 02:25:56Z
          - test fixes for error messages that changed

0.002     2022-03-25 23:47:55Z
          - new helper methods validate_request and validate_response

0.001     2022-02-16 06:14:12Z
          - First version, unleashed upon an unsuspecting world.